[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noaaplotter_streamlit"
version = "0.0.10"
description = "This is a Streamlit app utilizing the noaaplotter package"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.40",
    "noaaplotter @ git+https://github.com/initze/noaaplotter.git",
    "numpy>=2,<3",
    "noaaplotter_streamlit @ git+https://github.com/initze/noaaplotter_streamlit.git"
]

[tool.setuptools.packages.find]
where = ["src"]
